// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TileHandler/> render with default/require d props 1`] = `
<section
  className="tile-handler "
>
  <ComposedInput
    className=""
    data-cy="-pattern"
    label="filter"
    onChange={[Function]}
    placeholder="type pattern to search..."
  />
  <div
    className="tile-handler__container"
  >
    <Tile
      className=""
      data-cy="-tile-0"
      id={1}
      key="0"
      target="_blank"
      to="/explore/1"
    />
    <Tile
      className="tile__add-control"
      data-cy="-add"
      target="_blank"
      to="/new"
    />
  </div>
</section>
`;

exports[`<TileHandler/> render with optional props [::className] as "{{className}}" 1`] = `
<section
  className="tile-handler {{className}}"
>
  <ComposedInput
    className=""
    data-cy="-pattern"
    label="filter"
    onChange={[Function]}
    placeholder="type pattern to search..."
  />
  <div
    className="tile-handler__container"
  >
    <Tile
      className=""
      data-cy="-tile-0"
      id={1}
      key="0"
      target="_blank"
      to="/explore/1"
    />
    <Tile
      className="tile__add-control"
      data-cy="-add"
      target="_blank"
      to="/new"
    />
  </div>
</section>
`;

exports[`<TileHandler/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<section
  className="tile-handler "
>
  <ComposedInput
    className=""
    data-cy="{{data-cy}}-pattern"
    label="filter"
    onChange={[Function]}
    placeholder="type pattern to search..."
  />
  <div
    className="tile-handler__container"
  >
    <Tile
      className=""
      data-cy="{{data-cy}}-tile-0"
      id={1}
      key="0"
      target="_blank"
      to="/explore/1"
    />
    <Tile
      className="tile__add-control"
      data-cy="{{data-cy}}-add"
      target="_blank"
      to="/new"
    />
  </div>
</section>
`;
